# marimo_local_rag

./: .gitignore  README.md  diagnose_ollama.py  main.py  pyproject.toml  test_ollama.py  test_ollama_raw.py
data/pdfs/: .gitkeep
data/vectordb/: .gitkeep
notebooks/: rag_system.py
src/: __init__.py  config.py  embeddings.py  llm_interface.py  pdf_processor.py  rag_helpers.py  vector_store.py
tests/: test_chromadb.py  test_notebook.py
